fix: change z-index for dropdowns so there could be visible inside the modal

--- a/packages/angular/projects/clr-angular/src/utils/variables/_variables.global.scss
+++ b/packages/angular/projects/clr-angular/src/utils/variables/_variables.global.scss
@@ -265,13 +265,13 @@ $clr-layers: (
   datagrid-header: 501,
   datagrid-header-sticky: 502,
   datagrid-host: 590,
-  column-switch: 600,
-  dropdown-menu: 1000,
   alert: 1033,
   sidepanel-bg: 1038,
   sidepanel: 1039,
   modal-bg: 1040,
   modal: 1050,
+  dropdown-menu: 1060,
+  column-switch: 1060,
   tooltips: 1070,
   smart-popover: 5000,
   draggable-ghost: 2147483647,
